Fixed the Responsiveness and the overflow of some part affecting the web view

--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -106,7 +106,7 @@
         width: 350px;
     }
     .mySwiper .swiper-button-prev {
-        left: 74%;
+        left: 71%;
     }
     .mySwiper .swiper-button-next {
         right: 4%;
